[package]
name = "mediarustle"
version = "0.1.0"
edition = "2021"

[dependencies]
srtp = "0.7.0"
rodio = "0.17.0"
tonic = "0.10.1"
prost = "0.12.1"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
clap = { version = "4.1.4", features = ["derive"] }
tonic-reflection = "0.10.1"

[build-dependencies]
tonic-build = "0.10.1"

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
futures-util = "0.3.25"
anyhow = "1"

[[bin]]
  name = "server"
  path = "src/processor.rs"